--- a/site/index.html
+++ b/site/index.html
@@ -5,9 +5,6 @@
     <title>Hello Coursera</title>
   </head>
   <body>
-    <h1>Hi! Nice to meet you</h1>
+    <h1>Hi! Nice to meet you!!! blah blah blah</h1>
   </body>
 </html>
-
-
-# browser-sync start --server --directory --files "*"
